--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Accueil Git</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="page">
             <header>
                 <h1>Hello Git</h1>
+                <form action="">
+                    <input type="search">
+                    <button><i class="fas fa-search"></i></button>
+                </form>
             </header>
             <main>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus culpa corporis dicta aspernatur! Ducimus necessitatibus ullam, minus ea, soluta facere explicabo porro enim nobis velit asperiores recusandae dolores ipsum deserunt?</p>
