--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
             <header>
                 <h1>Hello Git</h1>
             </header>
-            <main>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus culpa corporis dicta aspernatur! Ducimus necessitatibus ullam, minus ea, soluta facere explicabo porro enim nobis velit asperiores recusandae dolores ipsum deserunt?</p>
-            </main>
+            <div class="content">
+                <main class="main">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus culpa corporis dicta aspernatur! Ducimus necessitatibus ullam, minus ea, soluta facere explicabo porro enim nobis velit asperiores recusandae dolores ipsum deserunt?</p>
+                </main>
+                <div class="sidebar">
+                    <h2>Titre sidebar</h2>
+                </div> <!-- .sidebar -->
+            </div><!-- .content -->
             <footer>
                 &copy; Cepegra - 2022
             </footer>
