add navigation in html & css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
                     <input type="search">
                     <button><i class="fas fa-search"></i></button>
                 </form>
+                <nav class="navigation">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Who ?</a></li>
+                    </ul>
+                </nav>
             </header>
             <div class="content">
                 <main class="main">
