chnage title gitClone

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="page">
             <header>
-                <h1>Hello Git</h1>
+                <h1>Hello GitClone</h1>
                 <form action="">
                     <input type="search">
                     <button><i class="fas fa-search"></i></button>
