--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="page">
             <header>
                 <h1>Hello GitClone</h1>
+                <p>Je suis au cepegra</p>
                 <form action="">
                     <input type="search">
                     <button><i class="fas fa-search"></i></button>
